[package]
name = "tower_governor"
authors = ["Ben Wishovich <ben@benw.is>"]
description = "A rate-limiting middleware for Tower backed by the governor crate that allows configurable key based and global limits"
repository = "https://github.com/benwis/tower-governor"
license = "MIT OR Apache-2.0"
readme = "README.md"
version = "0.4.3"
edition = "2021"
keywords = ["axum", "tower", "tonic", "rate-limit", "governor"]
categories = ["web-programming::http-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
forwarded-header-value = "0.1.1"
governor = { version = "0.7.0", default-features = false, features = ["std"] }
http = "1.1.0"
pin-project = "1.1.7"
thiserror = "2.0.3"
tower = "0.5.1"
tracing = { version = "0.1.40", features = ["attributes"] }

axum = { version = "0.7", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[features]
default = ["axum"]
# Enables support for axum web framework
axum = ["dep:axum"]
# Enables tracing output for this middleware
tracing = []
